tests/valid/function/generic_direct_call_explicit.facet
fn id<T>(x: affine T) -> affine T {
  x
}

fn main() -> affine isize {
  (id<unrestricted isize> 1)
}
