tests/invalid/lifetime/hrt_call_non_function.facet
fn bad(x: unrestricted isize) -> unrestricted isize {
    (x)
}
